Restore card container styling on clickable project cards (add card class)

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -24,7 +24,7 @@ const hasLink = !!primaryLink;
       href={primaryLink}
       target={caseStudySlug ? undefined : '_blank'}
       rel={caseStudySlug ? undefined : 'noopener noreferrer'}
-      class="card-hover group relative block overflow-hidden"
+      class="card card-hover group relative block overflow-hidden"
       data-stagger-item
       data-tilt
       data-tilt-max="3"
@@ -127,7 +127,7 @@ const hasLink = !!primaryLink;
 </a>
   ) : (
     <article
-      class="card-hover group relative overflow-hidden"
+      class="card card-hover group relative overflow-hidden"
       data-stagger-item
       data-tilt
       data-tilt-max="3"
