--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,6 +41,7 @@ import { projects } from '@/data/projects';
               repo={project.repo}
               caseStudySlug={project.caseStudy}
               isPrivate={project.isPrivate}
+              inProgress={project.inProgress}
             />
           ))
         }
