--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -26,7 +26,9 @@ const socialImage = new URL(image, Astro.site);
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo-main.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo-main.png" />
+    <link rel="apple-touch-icon" href="/logo-main.png" />
     <meta name="generator" content={Astro.generator} />
 
     <!-- Primary Meta Tags -->
